--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "latest",
     "react-modal": "^3.14.3"
+    "@babel/plugin-proposal-private-property-in-object": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
