--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "latest",
-    "react-modal": "^3.14.3"
+    "react-modal": "^3.14.3",
     "@babel/plugin-proposal-private-property-in-object": "latest"
   },
   "scripts": {
