--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react-scripts": "4.0.3",
     "react-modal": "^3.14.3"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.12.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
